src/components/main-nav/my-tags/my-tags.css
.tag-container {
	height: 400px;
	overflow: auto;
	margin-right: 25px;
	margin-top: 15px;
}

.tag-lists {
	list-style: none;
	line-height: 2;
	padding-left: 22px;
}

.tag-list:hover {
	cursor: pointer;
}

.tag-header {
	margin-left: 22px;
}

.follow-tag-button {
	background-color: #66e2d5;
	color: black;
	border: none;
	font-weight: bold;
	float: right;
	margin-top: 8px;
	margin-right: 15px;
	padding: 2px 6px 2px 6px;
	display: none;
}

.tag-list:hover .follow-tag-button {
	cursor: pointer;
	display: block;
}

